[package]
name = "rsdrive"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.34", features = ["full"]}
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
futures = "0.3"

axum = { version = "0.7", features = ["default", "multipart"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"

tracing = "0.1"
tracing-subscriber = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

strum_macros = "0.25"
anyhow = "1"
dashmap = "5"
homedir = "0.2"

# [dev-dependencies]
axum-macros = "0.4"
