[package]
name = "rsdrive"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[[bin]]
name = "server"
path = "src/bin/server.rs"

[dependencies]
tokio = { version = "1.34", features = ["full"]}
tokio-util = { version = "0.7", features = ["io"] }
async-trait = "0.1"
futures = "0.3"

axum = { version = "0.7", features = ["default", "multipart", "ws"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["fs"] }
tower-cookies = "0.10"

tracing = "0.1"
tracing-subscriber = "0.3"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = "3"

strum_macros = "0.25"
anyhow = "1"
dashmap = "5"
homedir = "0.2"
headers = "0.4"

tokio-tungstenite = "*"
futures-util = "0.3"
futures-channel = "0.3"
url = "2.5"

rs-utilities = "0.4.2"

rusqlite = { version = "0.31.0", features = ["bundled"] }

# [dev-dependencies]
axum-macros = "0.4"
